# music-video-lab

./: AGENTS.md  CLAUDE.md  CMakeLists.txt
.claude/skills/integrate-worktrees/: SKILL.md
.claude/skills/split-main-into-worktrees/: SKILL.md
.github/workflows/: ci.yml
src/: audio_analyzer.cpp  audio_analyzer.hpp  audio_inspector.cpp  audio_inspector.hpp  error.cpp  error.hpp  logger.cpp  logger.hpp  lyrics.cpp  lyrics.hpp  main.cpp  media_asset.cpp  media_asset.hpp  media_probe.cpp  media_probe.hpp  preview_plan.cpp  preview_plan.hpp  preview_session.cpp  preview_session.hpp  project_model.cpp  project_model.hpp  result.hpp  text_presentation.cpp  text_presentation.hpp  timeline.cpp  timeline.hpp  timeline_serialization.cpp  timeline_serialization.hpp
tests/: audio_analyzer_tests.cpp  audio_inspector_tests.cpp  error_tests.cpp  logger_tests.cpp  lyrics_tests.cpp  media_asset_tests.cpp  media_probe_tests.cpp  preview_plan_tests.cpp  preview_session_tests.cpp  project_model_tests.cpp  result_tests.cpp  smoke_tests.cpp  text_presentation_tests.cpp  timeline_serialization_tests.cpp  timeline_tests.cpp
